// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`receiptItems.update > functionality > update name > foreign 1`] = `
{
  "updated": {
    "receiptItems": {
      "id:f6ddac04-d233-4e5a-926c-680d1eeae1d5": {
        "name": "rerum magni quia",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`receiptItems.update > functionality > update name > own 1`] = `
{
  "updated": {
    "receiptItems": {
      "id:11dfa3bf-8270-4233-8644-efa2066d2e0b": {
        "name": "deleniti cum accusamus",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`receiptItems.update > functionality > update price > foreign 1`] = `
{
  "updated": {
    "receiptItems": {
      "id:f6ddac04-d233-4e5a-926c-680d1eeae1d5": {
        "price": "698.9600",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`receiptItems.update > functionality > update price > own 1`] = `
{
  "updated": {
    "receiptItems": {
      "id:11dfa3bf-8270-4233-8644-efa2066d2e0b": {
        "price": "534.5600",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`receiptItems.update > functionality > update quantity > foreign 1`] = `
{
  "updated": {
    "receiptItems": {
      "id:f6ddac04-d233-4e5a-926c-680d1eeae1d5": {
        "quantity": "70.0000",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`receiptItems.update > functionality > update quantity > own 1`] = `
{
  "updated": {
    "receiptItems": {
      "id:11dfa3bf-8270-4233-8644-efa2066d2e0b": {
        "quantity": "53.0000",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;
